--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "vite build && cp .\\package.json .\\build\\ && cp .\\package-lock.json .\\build\\ && cp .\\svelte.config.js .\\build\\  ",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check ."
+		"lint": "prettier --check .",
+		"start": "node index.js"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^5.2.12",
