--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-PRIVATE_FAVICON_FONT=/checkdaweb/data/favicon_gen.ttf # Path to the favicon font file
-PRIVATE_FAVICON_CACHE_TIME=86400 # 1 day in seconds
-PRIVATE_FAVICON_COLOR_OFFSET=-50 # Color offset for the favicon generation
+PRIVATE_FAVICON_FONT=/checkdaweb/data/favicon_gen.ttf # REQUIRED: Path to the favicon font file
+PRIVATE_FAVICON_CACHE_TIME=86400 # REQUIRED: 1 day in seconds
+PRIVATE_FAVICON_COLOR_OFFSET=-50 # REQUIRED: Color offset for the favicon generation
+PRIVATE_SELF_URL=http://google.com # REQUIRED: The Base URL use for the CSP
