--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,6 +58,6 @@ jobs:
           push: true
           tags: |
             bedlessdeus/checkdaweb:latest
-            bedlessdeus/checkdaweb:v${{ steps.get_version.outputs.VERSION }}
+            bedlessdeus/checkdaweb:v${{ steps.increment_version.outputs.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
