TOS & GDPR Update
+ Updated TOS & GDPR Pages to use environment variables for value (ex. Company Name, Company Email etc.)

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ PRIVATE_FAVICON_FONT=/checkdaweb/data/favicon_gen.ttf # REQUIRED: Path to the fa
 PRIVATE_FAVICON_CACHE_TIME=86400 # REQUIRED: 1 day in seconds
 PRIVATE_FAVICON_COLOR_OFFSET=-50 # REQUIRED: Color offset for the favicon generation
 PRIVATE_SELF_URL=http://google.com # REQUIRED: The Base URL use for the CSP
+
+PUBLIC_COMPANY_NAME=Your Company Name # REQUIRED: The name of your company
+PUBLIC_COMPANY_EMAIL=admin@yourcompany.com # REQUIRED: The email address of your company
+PUBLIC_COMPANY_ADDRESS=Private By Design LLC # REQUIRED: The address of your company
+PUBLIC_COMPANY_REGION=Germany # REQUIRED: The region of your company (e.g., Germany, United States Of America, Spain, Portugal)
